--- a/app/src/app/components/enhanceComponent.template.html
+++ b/app/src/app/components/enhanceComponent.template.html
@@ -1,6 +1,6 @@
-<div fxLayout="column wrap" class="padding20 bgWhiteColorBlack" fxLayoutGap="2em" fxLayoutAlign="center center" [fxShow]="true">
-  <div fxLayout="row wrap" class="width80" fxLayoutAlign="space-between center" [fxShow]="true">
-    <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start stretch" [fxShow]="true"><img imgSrc="/Web/images/33.jpg" class="width100"></div>
+<div fxLayout="column wrap" class="padding1em padding20 bgWhiteColorBlack" fxLayoutGap="1em" fxLayoutAlign="center center" [fxShow]="true">
+  <div fxLayout="row wrap" class="width80" fxLayoutAlign="space-between center" [fxShow]="true" fxLayout.xs="column">
+    <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start stretch" [fxShow]="true"><img imgSrc="/Web/images/left.jpg" class="heightFill width100"></div>
     <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start stretch" [fxShow]="true">
       <h1>
         Enhance your interior <br>
