--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -37,14 +37,21 @@ color: $white;
 }
 .locationPanel{
     background:$white;
-    height: 70px;
-    width: 480px;
+    height: 86px;
+    width: 740px;
     text-align: center;
     padding: 10px;
-    border-radius: 25px;
+    border-radius: 45px;
     color: black;
     line-height:0.1 ;
 
+}
+.height300{
+    height: 300px;
+}
+
+.heightFill{
+    height: -webkit-fill-available;
 }
 .quoteIcon{
     color: $red;
@@ -105,7 +112,10 @@ span{
   text-decoration: underline $white;
 }
 .width90{
-    width: 90%;
+    width: 95%;
+}
+.padding1em{
+    padding-top: 1em
 }
 .width80{
     width: 80%;
@@ -116,6 +126,14 @@ span{
  background:red;
   color: white;
 }
+.ngsearch{
+     height: 182px;
+    width: 300px;
+    text-align: center;
+    padding: 10px;
+    border-radius: 0px;
+}
+   
 
 .mat-button{
 border-radius: 34px !important;
