--- a/app/src/app/components/testimonials.template.html
+++ b/app/src/app/components/testimonials.template.html
@@ -24,7 +24,7 @@
       <p class="fontsize29">
         An architect&apos;s design must refer to the unquestionable perfection of the<br> body&apos;s symmetry and propotions.If a building is to create a sense of<br> eurythmy,it mirrors these natural laws of harmony and beuty</p>
       <div class="bold">
-        John Lenon-CO Founder of <span>Veeza</span></div>
+        John Lenon-CO Founder of <span class="spa">Veeza</span></div>
     </div>
   </div>
   <div fxLayout="row wrap" class="bgblackColorwhite width100" fxLayoutAlign="center center" [fxShow]="true">
